[gd_scene load_steps=3 format=3 uid="uid://cf30n2u4yqfdy"]

[ext_resource type="Script" uid="uid://buimde5i5h68s" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b8i664sk8rr5d" path="res://scenes/reel.tscn" id="1_o5qli"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Reel1" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(200, 250)

[node name="Reel2" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(400, 250)

[node name="Reel3" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(600, 250)

[node name="SpinButton" type="Button" parent="."]
offset_left = 400.0
offset_top = 450.0
offset_right = 445.0
offset_bottom = 481.0
text = "SPIN"

[node name="CreditsLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 20.0
offset_right = 121.0
offset_bottom = 43.0
text = "Credits: 100"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 350.0
offset_top = 150.0
offset_right = 390.0
offset_bottom = 173.0

[connection signal="pressed" from="SpinButton" to="." method="_on_spin_button_pressed"]
